finish setting.js

--- a/Frontend/public/pages/setting.html
+++ b/Frontend/public/pages/setting.html
@@ -22,7 +22,7 @@
                         語言與地區
                     </label>
                     <div class="relative">
-                        <select class=" w-full border-2 border-normal_theme  text-theme py-2 px-3 pr-8 rounded-lg leading-tight " >
+                        <select id="location" class=" w-full border-2 border-normal_theme  text-theme py-2 px-3 pr-8 rounded-lg leading-tight" >
                             <option>中文</option>
                             <option>English</option>
                             <option>한국인</option>
@@ -33,7 +33,7 @@
                     <label class="block text-xs text-light_theme mb-3">
                         名稱
                     </label>
-                    <input class="border-2 border-normal_theme text-theme rounded-lg w-full py-2 px-3  mb-3 leading-tight " placeholder="小絨音箱">
+                    <input id="speaker_name" class="border-2 border-normal_theme text-theme rounded-lg w-full py-2 px-3  mb-3 leading-tight " placeholder="小絨音箱">
                     
                 </div>
             
