--- a/Frontend/public/pages/setting.html
+++ b/Frontend/public/pages/setting.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XiaoRong Speaker</title>
     <link rel="stylesheet" href="styles.css">
-    
+    <link rel="icon" href="../../src/小絨音箱.png">
 </head>
 <body>
     <div class="h-screen flex flex-col justify-evenly items-center">
