--- a/Frontend/public/pages/done.html
+++ b/Frontend/public/pages/done.html
@@ -17,7 +17,7 @@
 
       <!--Button-->
       <div>
-        <a href="https://www.xiaorongserver.tk/">
+        <a href="http://www.xiaorongserver.tk/">
           <button
             id="done_button"
             class="bg-theme w-64 h-10 text-white py-2 px-4 rounded-md"
